--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.example.webcrawler">
 
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
@@ -12,6 +12,8 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        <activity android:name=".Board_detail">
+        </activity>
         <activity android:name=".Board">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -19,15 +21,15 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".complian_add">
-        </activity>
-        <activity android:name=".civil_compliant">
-        </activity>
-        <activity android:name=".CreateAccountActivity">
-        </activity>
-        <activity android:name=".MainActivity">
+        <!--<activity android:name=".complian_add">-->
+        <!--</activity>-->
+        <!--<activity android:name=".civil_compliant">-->
+        <!--</activity>-->
+        <!--<activity android:name=".CreateAccountActivity">-->
+        <!--</activity>-->
+        <!--<activity android:name=".MainActivity">-->
 
-        </activity>
+        <!--</activity>-->
     </application>
 
 </manifest>
